PPL/assignment2 - Copy/target/CSlangParser.py
# Generated from main/CSlang/parser/CSlang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'if'", "'else'", 
                     "'for'", "'true'", "'false'", "'int'", "'float'", "'bool'", 
                     "'string'", "'return'", "'null'", "'class'", "'constructor'", 
                     "'var'", "'self'", "'new'", "'void'", "'const'", "'func'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\'", "'!'", "'&&'", 
                     "'||'", "'=='", "'='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "':='", "'^'", "<INVALID>", "'%'", "'.'", "','", 
                     "';'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSE", "FOR", 
                      "TRUE", "FALSE", "INT", "FLOAT", "BOOL", "STRING", 
                      "RETURN", "NULL", "CLASS", "CONSTRUCTOR", "VAR", "SELF", 
                      "NEW", "VOID", "CONST", "FUNC", "PLUS", "MINUS", "MUL", 
                      "DIV", "BSLASH", "NOT", "AND", "OR", "EQUAL", "EQ", 
                      "DIF", "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "ASSIGN", "CONCAT", "NEWOP", "MOD", "DOT", "COMMA", 
                      "SEMICO", "COLON", "OPENCC", "CLOSECC", "OPENSQ", 
                      "CLOSESQ", "OPENBR", "CLOSEBR", "LINE_CMT", "BLOCK_CMT", 
                      "At", "ID", "INTLIT", "FLOATLIT", "STRINGLIT", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_dec = 1
    RULE_super_part = 2
    RULE_member = 3
    RULE_attribute = 4
    RULE_const_dec = 5
    RULE_var_dec = 6
    RULE_id_list = 7
    RULE_expressions_list = 8
    RULE_method = 9
    RULE_method_dec = 10
    RULE_parameter_list = 11
    RULE_parameter = 12
    RULE_method_con = 13
    RULE_at_type = 14
    RULE_func_type = 15
    RULE_array_type = 16
    RULE_expressions = 17
    RULE_expr = 18
    RULE_expr1 = 19
    RULE_expr2 = 20
    RULE_expr3 = 21
    RULE_expr4 = 22
    RULE_expr5 = 23
    RULE_expr6 = 24
    RULE_expr7 = 25
    RULE_expr8 = 26
    RULE_expr9 = 27
    RULE_expr10 = 28
    RULE_expr_list = 29
    RULE_statement = 30
    RULE_vardec_statement = 31
    RULE_assign_statement = 32
    RULE_if_statement = 33
    RULE_pre_statement = 34
    RULE_for_statement = 35
    RULE_for_condition = 36
    RULE_break_statement = 37
    RULE_continue_statement = 38
    RULE_method_statement = 39
    RULE_return_statement = 40
    RULE_block_statement = 41
    RULE_arraylit = 42
    RULE_litlist = 43
    RULE_literal = 44
    RULE_iden = 45
    RULE_boollit = 46

    ruleNames =  [ "program", "class_dec", "super_part", "member", "attribute", 
                   "const_dec", "var_dec", "id_list", "expressions_list", 
                   "method", "method_dec", "parameter_list", "parameter", 
                   "method_con", "at_type", "func_type", "array_type", "expressions", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "expr9", "expr10", "expr_list", 
                   "statement", "vardec_statement", "assign_statement", 
                   "if_statement", "pre_statement", "for_statement", "for_condition", 
                   "break_statement", "continue_statement", "method_statement", 
                   "return_statement", "block_statement", "arraylit", "litlist", 
                   "literal", "iden", "boollit" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSE=4
    FOR=5
    TRUE=6
    FALSE=7
    INT=8
    FLOAT=9
    BOOL=10
    STRING=11
    RETURN=12
    NULL=13
    CLASS=14
    CONSTRUCTOR=15
    VAR=16
    SELF=17
    NEW=18
    VOID=19
    CONST=20
    FUNC=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    BSLASH=26
    NOT=27
    AND=28
    OR=29
    EQUAL=30
    EQ=31
    DIF=32
    LESS=33
    LESS_EQUAL=34
    GREATER=35
    GREATER_EQUAL=36
    ASSIGN=37
    CONCAT=38
    NEWOP=39
    MOD=40
    DOT=41
    COMMA=42
    SEMICO=43
    COLON=44
    OPENCC=45
    CLOSECC=46
    OPENSQ=47
    CLOSESQ=48
    OPENBR=49
    CLOSEBR=50
    LINE_CMT=51
    BLOCK_CMT=52
    At=53
    ID=54
    INTLIT=55
    FLOATLIT=56
    STRINGLIT=57
    WS=58
    ERROR_CHAR=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def class_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Class_decContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Class_decContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.CLASS:
                self.state = 94
                self.class_dec()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def OPENBR(self):
            return self.getToken(CSlangParser.OPENBR, 0)

        def CLOSEBR(self):
            return self.getToken(CSlangParser.CLOSEBR, 0)

        def super_part(self):
            return self.getTypedRuleContext(CSlangParser.Super_partContext,0)


        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.MemberContext)
            else:
                return self.getTypedRuleContext(CSlangParser.MemberContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_dec" ):
                return visitor.visitClass_dec(self)
            else:
                return visitor.visitChildren(self)




    def class_dec(self):

        localctx = CSlangParser.Class_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CSlangParser.CLASS)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 103
                self.super_part()


            self.state = 106
            self.match(CSlangParser.ID)
            self.state = 107
            self.match(CSlangParser.OPENBR)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSlangParser.VAR) | (1 << CSlangParser.CONST) | (1 << CSlangParser.FUNC))) != 0):
                self.state = 108
                self.member()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(CSlangParser.CLOSEBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Super_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def LESS(self):
            return self.getToken(CSlangParser.LESS, 0)

        def MINUS(self):
            return self.getToken(CSlangParser.MINUS, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_super_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuper_part" ):
                return visitor.visitSuper_part(self)
            else:
                return visitor.visitChildren(self)




    def super_part(self):

        localctx = CSlangParser.Super_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_super_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(CSlangParser.ID)
            self.state = 117
            self.match(CSlangParser.LESS)
            self.state = 118
            self.match(CSlangParser.MINUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(CSlangParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(CSlangParser.MethodContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = CSlangParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.VAR, CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.attribute()
                pass
            elif token in [CSlangParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_dec(self):
            return self.getTypedRuleContext(CSlangParser.Const_decContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(CSlangParser.Var_decContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = CSlangParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.const_dec()
                pass
            elif token in [CSlangParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.var_dec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def id_list(self):
            return self.getTypedRuleContext(CSlangParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def at_type(self):
            return self.getTypedRuleContext(CSlangParser.At_typeContext,0)


        def EQ(self):
            return self.getToken(CSlangParser.EQ, 0)

        def expressions_list(self):
            return self.getTypedRuleContext(CSlangParser.Expressions_listContext,0)


        def SEMICO(self):
            return self.getToken(CSlangParser.SEMICO, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_const_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_dec" ):
                return visitor.visitConst_dec(self)
            else:
                return visitor.visitChildren(self)




    def const_dec(self):

        localctx = CSlangParser.Const_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(CSlangParser.CONST)
            self.state = 129
            self.id_list()
            self.state = 130
            self.match(CSlangParser.COLON)
            self.state = 131
            self.at_type()
            self.state = 132
            self.match(CSlangParser.EQ)
            self.state = 133
            self.expressions_list()
            self.state = 134
            self.match(CSlangParser.SEMICO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CSlangParser.VAR, 0)

        def id_list(self):
            return self.getTypedRuleContext(CSlangParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def at_type(self):
            return self.getTypedRuleContext(CSlangParser.At_typeContext,0)


        def SEMICO(self):
            return self.getToken(CSlangParser.SEMICO, 0)

        def EQ(self):
            return self.getToken(CSlangParser.EQ, 0)

        def expressions_list(self):
            return self.getTypedRuleContext(CSlangParser.Expressions_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = CSlangParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(CSlangParser.VAR)
            self.state = 137
            self.id_list()
            self.state = 138
            self.match(CSlangParser.COLON)
            self.state = 139
            self.at_type()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSlangParser.EQ:
                self.state = 140
                self.match(CSlangParser.EQ)
                self.state = 141
                self.expressions_list()


            self.state = 144
            self.match(CSlangParser.SEMICO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.IdenContext)
            else:
                return self.getTypedRuleContext(CSlangParser.IdenContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = CSlangParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.iden()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.COMMA:
                self.state = 147
                self.match(CSlangParser.COMMA)
                self.state = 148
                self.iden()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressions_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ExpressionsContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_expressions_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressions_list" ):
                return visitor.visitExpressions_list(self)
            else:
                return visitor.visitChildren(self)




    def expressions_list(self):

        localctx = CSlangParser.Expressions_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expressions_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.expressions()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.COMMA:
                self.state = 155
                self.match(CSlangParser.COMMA)
                self.state = 156
                self.expressions()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_dec(self):
            return self.getTypedRuleContext(CSlangParser.Method_decContext,0)


        def method_con(self):
            return self.getTypedRuleContext(CSlangParser.Method_conContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = CSlangParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.method_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.method_con()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def iden(self):
            return self.getTypedRuleContext(CSlangParser.IdenContext,0)


        def OPENCC(self):
            return self.getToken(CSlangParser.OPENCC, 0)

        def CLOSECC(self):
            return self.getToken(CSlangParser.CLOSECC, 0)

        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def func_type(self):
            return self.getTypedRuleContext(CSlangParser.Func_typeContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(CSlangParser.Block_statementContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(CSlangParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_dec" ):
                return visitor.visitMethod_dec(self)
            else:
                return visitor.visitChildren(self)




    def method_dec(self):

        localctx = CSlangParser.Method_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_method_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(CSlangParser.FUNC)
            self.state = 167
            self.iden()
            self.state = 168
            self.match(CSlangParser.OPENCC)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSlangParser.At or _la==CSlangParser.ID:
                self.state = 169
                self.parameter_list()


            self.state = 172
            self.match(CSlangParser.CLOSECC)
            self.state = 173
            self.match(CSlangParser.COLON)
            self.state = 174
            self.func_type()
            self.state = 175
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ParameterContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = CSlangParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.parameter()
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.COMMA:
                self.state = 178
                self.match(CSlangParser.COMMA)
                self.state = 179
                self.parameter()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(CSlangParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def at_type(self):
            return self.getTypedRuleContext(CSlangParser.At_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = CSlangParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.id_list()
            self.state = 186
            self.match(CSlangParser.COLON)
            self.state = 187
            self.at_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_conContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def CONSTRUCTOR(self):
            return self.getToken(CSlangParser.CONSTRUCTOR, 0)

        def OPENCC(self):
            return self.getToken(CSlangParser.OPENCC, 0)

        def CLOSECC(self):
            return self.getToken(CSlangParser.CLOSECC, 0)

        def block_statement(self):
            return self.getTypedRuleContext(CSlangParser.Block_statementContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(CSlangParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method_con

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_con" ):
                return visitor.visitMethod_con(self)
            else:
                return visitor.visitChildren(self)




    def method_con(self):
